# harumanis

./: .gitignore  BUILD.md  Cargo.toml  README.md
.cargo/: config.toml
crates/linear-allocator/: Cargo.toml  lib.rs
crates/riscv-mem/: Cargo.toml
crates/riscv-mem/src/: address.rs
crates/riscv-mem/src/frame_allocator/: stack.rs
crates/simple-shell/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: dtb.rs  ksched.rs  main.rs  symbols.rs  timer.rs  trap.rs
kernel/src/mem/: heap_alloc.rs
kernel/src/tasks/: mod.rs
kernel/src/util/: sbi.rs
src/: assembly.rs  block.rs  buffer.rs  cpu.rs  elf.rs  fd.rs  fs.rs  gpu.rs  input.rs  kmem.rs  lock.rs  main.rs  page.rs  process.rs  rng.rs  sched.rs  syscall.rs  test.rs  trap.rs  uart.rs  vfs.rs  virtio.rs
src/asm/: boot.S  trap.S
src/lds/: virt.lds
